adding continent to forest coverage DataFrame

--- a/Project - Spring 2023.ipynb
+++ b/Project - Spring 2023.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f979fd16",
+   "id": "ff75c11c",
    "metadata": {},
    "source": [
     "To access the World Bank Open Data API using Python, we installed the wbdata library"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "59853b29",
+   "id": "fd45434f",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31072f4b",
+   "id": "4c036292",
    "metadata": {},
    "source": [
     "Imported the data and looked at timeframe, countries and created the dataframe"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4ba9d897",
+   "id": "54d8d81b",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1ac002d7",
+   "id": "4700ad56",
    "metadata": {
     "scrolled": true
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8caaf87a",
+   "id": "a5ac4c0e",
    "metadata": {},
    "source": [
     "checking average forest coverage for selected countries"
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "956c63f2",
+   "id": "3d337b01",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88c32d58",
+   "id": "3347628e",
    "metadata": {},
    "source": [
     "checking min and max coverage "
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e2b7348b",
+   "id": "2de0f9fb",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bdaf19bf",
+   "id": "c69b0ba7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "182021f5",
+   "id": "005aadef",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "20e72282",
+   "id": "9d522ee4",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "28c2e44a",
+   "id": "3aa8c748",
    "metadata": {},
    "outputs": [
     {
@@ -583,14 +583,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "6eebd13d",
+   "execution_count": 55,
+   "id": "a6502d97",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Aruba North America\n",
+      "Afghanistan Asia\n",
+      "Angola Africa\n",
+      "Anguilla North America\n",
+      "Åland Islands Europe\n",
+      "Albania Europe\n",
+      "Andorra Europe\n",
+      "United Arab Emirates Asia\n",
+      "Argentina South America\n",
+      "Armenia Asia\n",
+      "American Samoa Oceania\n",
+      "Antigua and Barbuda North America\n",
+      "Australia Oceania\n",
+      "Austria Europe\n",
+      "Azerbaijan Asia\n",
+      "Burundi Africa\n",
+      "Belgium Europe\n",
+      "Benin Africa\n",
+      "Bonaire, Sint Eustatius and Saba North America\n",
+      "Burkina Faso Africa\n",
+      "Bangladesh Asia\n",
+      "Bulgaria Europe\n",
+      "Bahrain Asia\n",
+      "Bahamas North America\n",
+      "Bosnia and Herzegovina Europe\n",
+      "Saint Barthélemy North America\n",
+      "Belarus Europe\n",
+      "Belize North America\n",
+      "Bermuda North America\n",
+      "Bolivia, Plurinational State of South America\n",
+      "Brazil South America\n",
+      "Barbados North America\n",
+      "Brunei Darussalam Asia\n",
+      "Bhutan Asia\n",
+      "Bouvet Island Antarctica\n",
+      "Botswana Africa\n",
+      "Central African Republic Africa\n",
+      "Canada North America\n",
+      "Cocos (Keeling) Islands Asia\n",
+      "Switzerland Europe\n",
+      "Chile South America\n",
+      "China Asia\n",
+      "Côte d'Ivoire Africa\n",
+      "Cameroon Africa\n",
+      "Congo, The Democratic Republic of the Africa\n",
+      "Congo Africa\n",
+      "Cook Islands Oceania\n",
+      "Colombia South America\n",
+      "Comoros Africa\n",
+      "Cabo Verde Africa\n",
+      "Costa Rica North America\n",
+      "Cuba North America\n",
+      "Curaçao North America\n",
+      "Christmas Island Asia\n",
+      "Cayman Islands North America\n",
+      "Cyprus Asia\n",
+      "Czechia Europe\n",
+      "Germany Europe\n",
+      "Djibouti Africa\n",
+      "Dominica North America\n",
+      "Denmark Europe\n",
+      "Dominican Republic North America\n",
+      "Algeria Africa\n",
+      "Ecuador South America\n",
+      "Egypt Africa\n",
+      "Eritrea Africa\n",
+      "Spain Europe\n",
+      "Estonia Europe\n",
+      "Ethiopia Africa\n",
+      "Finland Europe\n",
+      "Fiji Oceania\n",
+      "Falkland Islands (Malvinas) South America\n",
+      "France Europe\n",
+      "Faroe Islands Europe\n",
+      "Micronesia, Federated States of Oceania\n",
+      "Gabon Africa\n",
+      "United Kingdom Europe\n",
+      "Georgia Asia\n",
+      "Guernsey Europe\n",
+      "Ghana Africa\n",
+      "Gibraltar Europe\n",
+      "Guinea Africa\n",
+      "Guadeloupe North America\n",
+      "Gambia Africa\n",
+      "Guinea-Bissau Africa\n",
+      "Equatorial Guinea Africa\n",
+      "Greece Europe\n",
+      "Grenada North America\n",
+      "Greenland North America\n",
+      "Guatemala North America\n",
+      "French Guiana South America\n",
+      "Guam Oceania\n",
+      "Guyana South America\n",
+      "Hong Kong Asia\n",
+      "Heard Island and McDonald Islands Antarctica\n",
+      "Honduras North America\n",
+      "Croatia Europe\n",
+      "Haiti North America\n",
+      "Hungary Europe\n",
+      "Indonesia Asia\n",
+      "Isle of Man Europe\n",
+      "India Asia\n",
+      "British Indian Ocean Territory Asia\n",
+      "Ireland Europe\n",
+      "Iran, Islamic Republic of Asia\n",
+      "Iraq Asia\n",
+      "Iceland Europe\n",
+      "Israel Asia\n",
+      "Italy Europe\n",
+      "Jamaica North America\n",
+      "Jersey Europe\n",
+      "Jordan Asia\n",
+      "Japan Asia\n",
+      "Kazakhstan Asia\n",
+      "Kenya Africa\n",
+      "Kyrgyzstan Asia\n",
+      "Cambodia Asia\n",
+      "Kiribati Oceania\n",
+      "Saint Kitts and Nevis North America\n",
+      "Korea, Republic of Asia\n",
+      "Kuwait Asia\n",
+      "Lao People's Democratic Republic Asia\n",
+      "Lebanon Asia\n",
+      "Liberia Africa\n",
+      "Libya Africa\n",
+      "Saint Lucia North America\n",
+      "Liechtenstein Europe\n",
+      "Sri Lanka Asia\n",
+      "Lesotho Africa\n",
+      "Lithuania Europe\n",
+      "Luxembourg Europe\n",
+      "Latvia Europe\n",
+      "Macao Asia\n",
+      "Saint Martin (French part) North America\n",
+      "Morocco Africa\n",
+      "Monaco Europe\n",
+      "Moldova, Republic of Europe\n",
+      "Madagascar Africa\n",
+      "Maldives Asia\n",
+      "Mexico North America\n",
+      "Marshall Islands Oceania\n",
+      "North Macedonia Europe\n",
+      "Mali Africa\n",
+      "Malta Europe\n",
+      "Myanmar Asia\n",
+      "Montenegro Europe\n",
+      "Mongolia Asia\n",
+      "Northern Mariana Islands Oceania\n",
+      "Mozambique Africa\n",
+      "Mauritania Africa\n",
+      "Montserrat North America\n",
+      "Martinique North America\n",
+      "Mauritius Africa\n",
+      "Malawi Africa\n",
+      "Malaysia Asia\n",
+      "Mayotte Africa\n",
+      "Namibia Africa\n",
+      "New Caledonia Oceania\n",
+      "Niger Africa\n",
+      "Norfolk Island Oceania\n",
+      "Nigeria Africa\n",
+      "Nicaragua North America\n",
+      "Niue Oceania\n",
+      "Netherlands Europe\n",
+      "Norway Europe\n",
+      "Nepal Asia\n",
+      "Nauru Oceania\n",
+      "New Zealand Oceania\n",
+      "Oman Asia\n",
+      "Pakistan Asia\n",
+      "Panama North America\n",
+      "Peru South America\n",
+      "Philippines Asia\n",
+      "Palau Oceania\n",
+      "Papua New Guinea Oceania\n",
+      "Poland Europe\n",
+      "Puerto Rico North America\n",
+      "Korea, Democratic People's Republic of Asia\n",
+      "Portugal Europe\n",
+      "Paraguay South America\n",
+      "Palestine, State of Asia\n",
+      "French Polynesia Oceania\n",
+      "Qatar Asia\n",
+      "Réunion Africa\n",
+      "Romania Europe\n",
+      "Russian Federation Europe\n",
+      "Rwanda Africa\n",
+      "Saudi Arabia Asia\n",
+      "Sudan Africa\n",
+      "Senegal Africa\n",
+      "Singapore Asia\n",
+      "South Georgia and the South Sandwich Islands South America\n",
+      "Saint Helena, Ascension and Tristan da Cunha Africa\n",
+      "Svalbard and Jan Mayen Europe\n",
+      "Solomon Islands Oceania\n",
+      "Sierra Leone Africa\n",
+      "El Salvador North America\n",
+      "San Marino Europe\n",
+      "Somalia Africa\n",
+      "Saint Pierre and Miquelon North America\n",
+      "Serbia Europe\n",
+      "South Sudan Africa\n",
+      "Sao Tome and Principe Africa\n",
+      "Suriname South America\n",
+      "Slovakia Europe\n",
+      "Slovenia Europe\n",
+      "Sweden Europe\n",
+      "Eswatini Africa\n",
+      "Seychelles Africa\n",
+      "Syrian Arab Republic Asia\n",
+      "Turks and Caicos Islands North America\n",
+      "Chad Africa\n",
+      "Togo Africa\n",
+      "Thailand Asia\n",
+      "Tajikistan Asia\n",
+      "Tokelau Oceania\n",
+      "Turkmenistan Asia\n",
+      "Tonga Oceania\n",
+      "Trinidad and Tobago North America\n",
+      "Tunisia Africa\n",
+      "Turkey Asia\n",
+      "Tuvalu Oceania\n",
+      "Taiwan, Province of China Asia\n",
+      "Tanzania, United Republic of Africa\n",
+      "Uganda Africa\n",
+      "Ukraine Europe\n",
+      "Uruguay South America\n",
+      "United States North America\n",
+      "Uzbekistan Asia\n",
+      "Saint Vincent and the Grenadines North America\n",
+      "Venezuela, Bolivarian Republic of South America\n",
+      "Virgin Islands, British North America\n",
+      "Virgin Islands, U.S. North America\n",
+      "Viet Nam Asia\n",
+      "Vanuatu Oceania\n",
+      "Wallis and Futuna Oceania\n",
+      "Samoa Oceania\n",
+      "Yemen Asia\n",
+      "South Africa Africa\n",
+      "Zambia Africa\n",
+      "Zimbabwe Africa\n",
       "{'ABW': 'North America', 'AFG': 'Asia', 'AGO': 'Africa', 'AIA': 'North America', 'ALA': 'Europe', 'ALB': 'Europe', 'AND': 'Europe', 'ARE': 'Asia', 'ARG': 'South America', 'ARM': 'Asia', 'ASM': 'Oceania', 'ATG': 'North America', 'AUS': 'Oceania', 'AUT': 'Europe', 'AZE': 'Asia', 'BDI': 'Africa', 'BEL': 'Europe', 'BEN': 'Africa', 'BES': 'North America', 'BFA': 'Africa', 'BGD': 'Asia', 'BGR': 'Europe', 'BHR': 'Asia', 'BHS': 'North America', 'BIH': 'Europe', 'BLM': 'North America', 'BLR': 'Europe', 'BLZ': 'North America', 'BMU': 'North America', 'BOL': 'South America', 'BRA': 'South America', 'BRB': 'North America', 'BRN': 'Asia', 'BTN': 'Asia', 'BVT': 'Antarctica', 'BWA': 'Africa', 'CAF': 'Africa', 'CAN': 'North America', 'CCK': 'Asia', 'CHE': 'Europe', 'CHL': 'South America', 'CHN': 'Asia', 'CIV': 'Africa', 'CMR': 'Africa', 'COD': 'Africa', 'COG': 'Africa', 'COK': 'Oceania', 'COL': 'South America', 'COM': 'Africa', 'CPV': 'Africa', 'CRI': 'North America', 'CUB': 'North America', 'CUW': 'North America', 'CXR': 'Asia', 'CYM': 'North America', 'CYP': 'Asia', 'CZE': 'Europe', 'DEU': 'Europe', 'DJI': 'Africa', 'DMA': 'North America', 'DNK': 'Europe', 'DOM': 'North America', 'DZA': 'Africa', 'ECU': 'South America', 'EGY': 'Africa', 'ERI': 'Africa', 'ESP': 'Europe', 'EST': 'Europe', 'ETH': 'Africa', 'FIN': 'Europe', 'FJI': 'Oceania', 'FLK': 'South America', 'FRA': 'Europe', 'FRO': 'Europe', 'FSM': 'Oceania', 'GAB': 'Africa', 'GBR': 'Europe', 'GEO': 'Asia', 'GGY': 'Europe', 'GHA': 'Africa', 'GIB': 'Europe', 'GIN': 'Africa', 'GLP': 'North America', 'GMB': 'Africa', 'GNB': 'Africa', 'GNQ': 'Africa', 'GRC': 'Europe', 'GRD': 'North America', 'GRL': 'North America', 'GTM': 'North America', 'GUF': 'South America', 'GUM': 'Oceania', 'GUY': 'South America', 'HKG': 'Asia', 'HMD': 'Antarctica', 'HND': 'North America', 'HRV': 'Europe', 'HTI': 'North America', 'HUN': 'Europe', 'IDN': 'Asia', 'IMN': 'Europe', 'IND': 'Asia', 'IOT': 'Asia', 'IRL': 'Europe', 'IRN': 'Asia', 'IRQ': 'Asia', 'ISL': 'Europe', 'ISR': 'Asia', 'ITA': 'Europe', 'JAM': 'North America', 'JEY': 'Europe', 'JOR': 'Asia', 'JPN': 'Asia', 'KAZ': 'Asia', 'KEN': 'Africa', 'KGZ': 'Asia', 'KHM': 'Asia', 'KIR': 'Oceania', 'KNA': 'North America', 'KOR': 'Asia', 'KWT': 'Asia', 'LAO': 'Asia', 'LBN': 'Asia', 'LBR': 'Africa', 'LBY': 'Africa', 'LCA': 'North America', 'LIE': 'Europe', 'LKA': 'Asia', 'LSO': 'Africa', 'LTU': 'Europe', 'LUX': 'Europe', 'LVA': 'Europe', 'MAC': 'Asia', 'MAF': 'North America', 'MAR': 'Africa', 'MCO': 'Europe', 'MDA': 'Europe', 'MDG': 'Africa', 'MDV': 'Asia', 'MEX': 'North America', 'MHL': 'Oceania', 'MKD': 'Europe', 'MLI': 'Africa', 'MLT': 'Europe', 'MMR': 'Asia', 'MNE': 'Europe', 'MNG': 'Asia', 'MNP': 'Oceania', 'MOZ': 'Africa', 'MRT': 'Africa', 'MSR': 'North America', 'MTQ': 'North America', 'MUS': 'Africa', 'MWI': 'Africa', 'MYS': 'Asia', 'MYT': 'Africa', 'NAM': 'Africa', 'NCL': 'Oceania', 'NER': 'Africa', 'NFK': 'Oceania', 'NGA': 'Africa', 'NIC': 'North America', 'NIU': 'Oceania', 'NLD': 'Europe', 'NOR': 'Europe', 'NPL': 'Asia', 'NRU': 'Oceania', 'NZL': 'Oceania', 'OMN': 'Asia', 'PAK': 'Asia', 'PAN': 'North America', 'PER': 'South America', 'PHL': 'Asia', 'PLW': 'Oceania', 'PNG': 'Oceania', 'POL': 'Europe', 'PRI': 'North America', 'PRK': 'Asia', 'PRT': 'Europe', 'PRY': 'South America', 'PSE': 'Asia', 'PYF': 'Oceania', 'QAT': 'Asia', 'REU': 'Africa', 'ROU': 'Europe', 'RUS': 'Europe', 'RWA': 'Africa', 'SAU': 'Asia', 'SDN': 'Africa', 'SEN': 'Africa', 'SGP': 'Asia', 'SGS': 'South America', 'SHN': 'Africa', 'SJM': 'Europe', 'SLB': 'Oceania', 'SLE': 'Africa', 'SLV': 'North America', 'SMR': 'Europe', 'SOM': 'Africa', 'SPM': 'North America', 'SRB': 'Europe', 'SSD': 'Africa', 'STP': 'Africa', 'SUR': 'South America', 'SVK': 'Europe', 'SVN': 'Europe', 'SWE': 'Europe', 'SWZ': 'Africa', 'SYC': 'Africa', 'SYR': 'Asia', 'TCA': 'North America', 'TCD': 'Africa', 'TGO': 'Africa', 'THA': 'Asia', 'TJK': 'Asia', 'TKL': 'Oceania', 'TKM': 'Asia', 'TON': 'Oceania', 'TTO': 'North America', 'TUN': 'Africa', 'TUR': 'Asia', 'TUV': 'Oceania', 'TWN': 'Asia', 'TZA': 'Africa', 'UGA': 'Africa', 'UKR': 'Europe', 'URY': 'South America', 'USA': 'North America', 'UZB': 'Asia', 'VCT': 'North America', 'VEN': 'South America', 'VGB': 'North America', 'VIR': 'North America', 'VNM': 'Asia', 'VUT': 'Oceania', 'WLF': 'Oceania', 'WSM': 'Oceania', 'YEM': 'Asia', 'ZAF': 'Africa', 'ZMB': 'Africa', 'ZWE': 'Africa'}\n"
      ]
     }
@@ -609,10 +850,39 @@
     "for country in pycountry.countries:  \n",
     "    try:\n",
     "        continent = country_to_continent(country.alpha_2)        \n",
-    "        country_code_to_continent[country.alpha_3]=   continent \n",
+    "        country_code_to_continent[country.alpha_3]= continent         \n",
     "    except:\n",
     "        pass\n",
     "print(country_code_to_continent)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "b23789b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "continent\n",
+      "Africa           28.969330\n",
+      "Asia             22.960607\n",
+      "Europe           30.304611\n",
+      "North America    37.713132\n",
+      "Oceania          49.680202\n",
+      "South America    51.244379\n",
+      "Name: value, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add continent data to dataframe\n",
+    "\n",
+    "global_forest_df['continent'] = global_forest_df['countryiso3code'].map(country_code_to_continent)\n",
+    "avg_forest_coverage_by_continent = global_forest_df.groupby('continent')['value'].mean()\n",
+    "print(avg_forest_coverage_by_continent)"
    ]
   }
  ],
