--- a/Project - Spring 2023.ipynb
+++ b/Project - Spring 2023.ipynb
@@ -7,24 +7,26 @@
    "source": [
     "DATASETS\n",
     "\n",
-    "1. World Bank Open Data\n",
-    "2.\n"
+    "1. World Bank Open Data - Forest coverage (API)\n",
+    "2. UN Data - Population by sex and urban/rural residence between 2000 - 2020 (csv)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "id": "f0074a11",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ff75c11c",
+   "id": "fe99ebc8",
    "metadata": {},
    "source": [
     "To access the World Bank Open Data API using Python, we installed the wbdata library"
@@ -33,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fd45434f",
+   "id": "2d666670",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c036292",
+   "id": "64358b6f",
    "metadata": {},
    "source": [
     "Imported the data and looked at timeframe, countries and created the dataframe"
@@ -72,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "54d8d81b",
+   "id": "1b91fbf1",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4700ad56",
+   "id": "3f4fdb07",
    "metadata": {
     "scrolled": true
    },
@@ -280,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ac4c0e",
+   "id": "baf61065",
    "metadata": {},
    "source": [
     "checking average forest coverage for selected countries"
@@ -289,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3d337b01",
+   "id": "e4683c25",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3347628e",
+   "id": "3393609a",
    "metadata": {},
    "source": [
     "checking min and max coverage "
@@ -326,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2de0f9fb",
+   "id": "eb4d83b2",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c69b0ba7",
+   "id": "54b85b8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "005aadef",
+   "id": "ed310a6c",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9d522ee4",
+   "id": "91d64be2",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "3aa8c748",
+   "id": "871926a8",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a6502d97",
+   "id": "c04340fe",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "b23789b1",
+   "id": "0ccfc3bc",
    "metadata": {},
    "outputs": [
     {
@@ -883,6 +885,334 @@
     "global_forest_df['continent'] = global_forest_df['countryiso3code'].map(country_code_to_continent)\n",
     "avg_forest_coverage_by_continent = global_forest_df.groupby('continent')['value'].mean()\n",
     "print(avg_forest_coverage_by_continent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63879b81",
+   "metadata": {},
+   "source": [
+    "UN Data on Population by sex and urban/rural residence between 2000 - 2020"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "3d926b4e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Record Type</th>\n",
+       "      <th>Reliability</th>\n",
+       "      <th>Source Year</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Value Footnotes</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country or Area</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>Both Sexes</td>\n",
+       "      <td>Estimate - de facto</td>\n",
+       "      <td>Final figure, incomplete/questionable reliability</td>\n",
+       "      <td>2021.0</td>\n",
+       "      <td>31390171.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>Both Sexes</td>\n",
+       "      <td>Estimate - de facto</td>\n",
+       "      <td>Final figure, incomplete/questionable reliability</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>30725560.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>Both Sexes</td>\n",
+       "      <td>Estimate - de facto</td>\n",
+       "      <td>Final figure, incomplete/questionable reliability</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>30075018.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>Both Sexes</td>\n",
+       "      <td>Estimate - de facto</td>\n",
+       "      <td>Final figure, incomplete/questionable reliability</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>28224323.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>Both Sexes</td>\n",
+       "      <td>Estimate - de facto</td>\n",
+       "      <td>Final figure, incomplete/questionable reliability</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>27657145.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Year   Area         Sex          Record Type  \\\n",
+       "Country or Area                                                 \n",
+       "Afghanistan      2020  Total  Both Sexes  Estimate - de facto   \n",
+       "Afghanistan      2019  Total  Both Sexes  Estimate - de facto   \n",
+       "Afghanistan      2018  Total  Both Sexes  Estimate - de facto   \n",
+       "Afghanistan      2017  Total  Both Sexes  Estimate - de facto   \n",
+       "Afghanistan      2016  Total  Both Sexes  Estimate - de facto   \n",
+       "\n",
+       "                                                       Reliability  \\\n",
+       "Country or Area                                                      \n",
+       "Afghanistan      Final figure, incomplete/questionable reliability   \n",
+       "Afghanistan      Final figure, incomplete/questionable reliability   \n",
+       "Afghanistan      Final figure, incomplete/questionable reliability   \n",
+       "Afghanistan      Final figure, incomplete/questionable reliability   \n",
+       "Afghanistan      Final figure, incomplete/questionable reliability   \n",
+       "\n",
+       "                 Source Year       Value Value Footnotes  \n",
+       "Country or Area                                           \n",
+       "Afghanistan           2021.0  31390171.0               1  \n",
+       "Afghanistan           2019.0  30725560.0               1  \n",
+       "Afghanistan           2019.0  30075018.0               1  \n",
+       "Afghanistan           2018.0  28224323.0               1  \n",
+       "Afghanistan           2017.0  27657145.0               1  "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population = pd.read_csv(\"population_by_sex_residence.csv\", index_col = 0)\n",
+    "population.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "681becdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Country or Area</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Record Type</th>\n",
+       "      <th>Reliability</th>\n",
+       "      <th>Source Year</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Value Footnotes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>Both Sexes</td>\n",
+       "      <td>Estimate - de facto</td>\n",
+       "      <td>Final figure, incomplete/questionable reliability</td>\n",
+       "      <td>2021.0</td>\n",
+       "      <td>31390171.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>Both Sexes</td>\n",
+       "      <td>Estimate - de facto</td>\n",
+       "      <td>Final figure, incomplete/questionable reliability</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>30725560.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>Both Sexes</td>\n",
+       "      <td>Estimate - de facto</td>\n",
+       "      <td>Final figure, incomplete/questionable reliability</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>30075018.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>Both Sexes</td>\n",
+       "      <td>Estimate - de facto</td>\n",
+       "      <td>Final figure, incomplete/questionable reliability</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>28224323.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>Both Sexes</td>\n",
+       "      <td>Estimate - de facto</td>\n",
+       "      <td>Final figure, incomplete/questionable reliability</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>27657145.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index Country or Area  Year   Area         Sex          Record Type  \\\n",
+       "0      0     Afghanistan  2020  Total  Both Sexes  Estimate - de facto   \n",
+       "1      1     Afghanistan  2019  Total  Both Sexes  Estimate - de facto   \n",
+       "2      2     Afghanistan  2018  Total  Both Sexes  Estimate - de facto   \n",
+       "3      3     Afghanistan  2017  Total  Both Sexes  Estimate - de facto   \n",
+       "4      4     Afghanistan  2016  Total  Both Sexes  Estimate - de facto   \n",
+       "\n",
+       "                                         Reliability  Source Year       Value  \\\n",
+       "0  Final figure, incomplete/questionable reliability       2021.0  31390171.0   \n",
+       "1  Final figure, incomplete/questionable reliability       2019.0  30725560.0   \n",
+       "2  Final figure, incomplete/questionable reliability       2019.0  30075018.0   \n",
+       "3  Final figure, incomplete/questionable reliability       2018.0  28224323.0   \n",
+       "4  Final figure, incomplete/questionable reliability       2017.0  27657145.0   \n",
+       "\n",
+       "  Value Footnotes  \n",
+       "0               1  \n",
+       "1               1  \n",
+       "2               1  \n",
+       "3               1  \n",
+       "4               1  "
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population.columns\n",
+    "population.reset_index(inplace=True)\n",
+    "population.columns\n",
+    "population.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "8211cabd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'function' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-77-a4fff53abf8e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mcontinent_name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mpopulation\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'continent'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpopulation\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Country or Area'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcountry_name_to_continent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcountry_name_to_continent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mpopulation\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-77-a4fff53abf8e>\u001b[0m in \u001b[0;36mcountry_name_to_continent\u001b[1;34m(country_name)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcountry_name_to_continent\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mcountry_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mcountry_code\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcountry_name_to_country_alpha2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcountry_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mcontinent_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcountry_to_continent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcountry_code\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mcontinent_name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pycountry_convert\\convert_countries.py\u001b[0m in \u001b[0;36mcountry_name_to_country_alpha2\u001b[1;34m(cn_name, cn_name_format)\u001b[0m\n\u001b[0;32m     59\u001b[0m     \u001b[0mdict_country_name_to_country_alpha2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmap_country_name_to_country_alpha2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcn_name_format\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 61\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcn_name\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     62\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mcountry_alpha3_to_country_alpha2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcn_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'function' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "def country_name_to_continent (country_name):        \n",
+    "    country_code = pc.country_name_to_country_alpha2(country_name)    \n",
+    "    continent_name = country_to_continent(country_code)\n",
+    "    return continent_name\n",
+    "\n",
+    "population['continent'] = population['Country or Area'].map(country_name_to_continent(country_name_to_continent))\n",
+    "population.head()"
    ]
   }
  ],
